# quahl

./: README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
quahl/: __init__.py  __main__.py
quahl/browser/: __init__.py  app.py  certificateerrordialog.py  downloadmanager.py  helpers.py  notificationoverlay.py  profile.py  urleditwidget.py  webpage.py  webview.py  window.py
quahl/browser/resources/: __init__.py  _make_outline50.py  _make_outline50_d.py  _make_outline_d.py  _make_strokewidth.py  index_of_icons.html  new_window_page.html
quahl/browser/resources/icons/: __init__.py  index_of_icons.html  make_icons.py
quahl/browser/resources/pages/: __init__.py
quahl/ipc/: JSONRPC-API.md  __init__.py  jsonrpc.py
