[tool.poetry]
name = "quahl"
version = "0.1.0"
description = ""
authors = ["Florian <florian@florian.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pyside6 = "^6.7.0"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100